--- a/src/components/unicorn-background/unicorn-background.module.css
+++ b/src/components/unicorn-background/unicorn-background.module.css
@@ -4,10 +4,6 @@
   z-index: 0;
 }
 
-[data-theme='dark'] .wrapper {
-  mix-blend-mode: color;
-}
-
 @media (prefers-reduced-motion: reduce) {
   .wrapper {
     display: none;
